tests/baselines/reference/typeofClass.errors.txt
==== tests/cases/compiler/typeofClass.ts (2 errors) ====
    class K {
        foo: number;
        static bar: string;
    }
    
    var k1: K;
    k1.foo;
    k1.bar;
       ~~~
!!! typeofClass.ts(8,4): error TS2094: The property 'bar' does not exist on value of type 'K'.
    var k2: typeof K;
    k2.foo;
       ~~~
!!! typeofClass.ts(10,4): error TS2094: The property 'foo' does not exist on value of type 'typeof K'.
    k2.bar;